feat: Implement a testimonial wall with a new backend API and client-side review management.

--- a/contact.html
+++ b/contact.html
@@ -188,25 +188,13 @@
             <div class="row ftco-animate">
                 <div class="col-md-12">
                     <!-- Custom Premium Carousel -->
-                    <div class="premium-testimonial-carousel">
-                        <div class="testimonial-viewport">
-                            <div class="testimonial-track" id="reviews-track">
-                                <!-- Reviews will be loaded dynamically via js/reviews.js -->
-                            </div>
-                        </div>
+                    <!-- Dual-Row Horizontal Marquee -->
+                    <div class="marquee-section">
+                        <!-- Row 1: Left to Right -->
+                        <div class="marquee-track-wrapper" id="marquee-row-1"></div>
 
-                        <!-- Navigation Controls -->
-                        <div class="carousel-controls">
-                            <button class="nav-btn prev-btn" aria-label="Previous Testimonial">
-                                <i class="fa fa-angle-left"></i>
-                            </button>
-                            <div class="progress-container">
-                                <div class="progress-bar" id="carousel-progress"></div>
-                            </div>
-                            <button class="nav-btn next-btn" aria-label="Next Testimonial">
-                                <i class="fa fa-angle-right"></i>
-                            </button>
-                        </div>
+                        <!-- Row 2: Right to Left -->
+                        <div class="marquee-track-wrapper" id="marquee-row-2"></div>
                     </div>
                 </div>
             </div>
