--- a/packages.html
+++ b/packages.html
@@ -87,7 +87,7 @@
                 <!-- Package 1 -->
                 <div class="col-md-6 col-lg-4 ftco-animate">
                     <div class="package-card">
-                        <div class="package-img" style="background-image: url(images/destination-1.jpg);"></div>
+                        <div class="package-img" style="background-image: url(images/dest-sigiriya.jpg);"></div>
                         <div class="package-content">
                             <span class="package-duration">7 Days / 6 Nights</span>
                             <h3>Cultural Triangle Explorer</h3>
@@ -110,7 +110,8 @@
                 <!-- Package 2 -->
                 <div class="col-md-6 col-lg-4 ftco-animate">
                     <div class="package-card">
-                        <div class="package-img" style="background-image: url(images/destination-2.jpg);"></div>
+                        <div class="package-img"
+                            style="background-image: url(images/destinations/mirissa/mirissa.jpg);"></div>
                         <div class="package-content">
                             <span class="package-duration">5 Days / 4 Nights</span>
                             <h3>Beach & Wildlife Safari</h3>
@@ -132,7 +133,7 @@
                 <!-- Package 3 -->
                 <div class="col-md-6 col-lg-4 ftco-animate">
                     <div class="package-card">
-                        <div class="package-img" style="background-image: url(images/destination-3.jpg);"></div>
+                        <div class="package-img" style="background-image: url(images/dest-ella.jpg);"></div>
                         <div class="package-content">
                             <span class="package-duration">10 Days / 9 Nights</span>
                             <h3>Complete Sri Lanka</h3>
@@ -154,7 +155,7 @@
                 <!-- Package 4 -->
                 <div class="col-md-6 col-lg-4 ftco-animate">
                     <div class="package-card">
-                        <div class="package-img" style="background-image: url(images/destination-4.jpg);"></div>
+                        <div class="package-img" style="background-image: url(images/dest-knuckles.jpg);"></div>
                         <div class="package-content">
                             <span class="package-duration">6 Days / 5 Nights</span>
                             <h3>Hill Country & Tea Trails</h3>
@@ -177,7 +178,7 @@
                 <!-- Package 5 -->
                 <div class="col-md-6 col-lg-4 ftco-animate">
                     <div class="package-card">
-                        <div class="package-img" style="background-image: url(images/destination-5.jpg);"></div>
+                        <div class="package-img" style="background-image: url(images/dest-sinharaja.jpg);"></div>
                         <div class="package-content">
                             <span class="package-duration">4 Days / 3 Nights</span>
                             <h3>Wildlife & Nature Adventure</h3>
@@ -199,7 +200,7 @@
                 <!-- Package 6 -->
                 <div class="col-md-6 col-lg-4 ftco-animate">
                     <div class="package-card">
-                        <div class="package-img" style="background-image: url(images/destination-6.jpg);"></div>
+                        <div class="package-img" style="background-image: url(images/dest-galle.jpg);"></div>
                         <div class="package-content">
                             <span class="package-duration">8 Days / 7 Nights</span>
                             <h3>Coastal Paradise Tour</h3>
@@ -221,7 +222,8 @@
                 <!-- Package 7 -->
                 <div class="col-md-6 col-lg-4 ftco-animate">
                     <div class="package-card">
-                        <div class="package-img" style="background-image: url(images/destination-7.jpg);"></div>
+                        <div class="package-img"
+                            style="background-image: url(images/destinations/kandy/temple-of-tooth.jpg);"></div>
                         <div class="package-content">
                             <span class="package-duration">3 Days / 2 Nights</span>
                             <h3>Weekend Getaway</h3>
@@ -243,7 +245,8 @@
                 <!-- Package 8 -->
                 <div class="col-md-6 col-lg-4 ftco-animate">
                     <div class="package-card">
-                        <div class="package-img" style="background-image: url(images/destination-8.jpg);"></div>
+                        <div class="package-img"
+                            style="background-image: url(images/destinations/polonnaruwa/polonnaruwa.jpg);"></div>
                         <div class="package-content">
                             <span class="package-duration">12 Days / 11 Nights</span>
                             <h3>Grand Sri Lanka Tour</h3>
@@ -265,7 +268,8 @@
                 <!-- Package 9 - Custom -->
                 <div class="col-md-6 col-lg-4 ftco-animate">
                     <div class="package-card">
-                        <div class="package-img" style="background-image: url(images/destination-9.jpg);"></div>
+                        <div class="package-img"
+                            style="background-image: url(images/destinations/hortonplains/hortonplains.jpg);"></div>
                         <div class="package-content">
                             <span class="package-duration">Flexible Duration</span>
                             <h3>Custom Tour Package</h3>
@@ -342,7 +346,7 @@
                 </div>
                 <div class="col-md-3 ftco-animate">
                     <div class="contact-info-item text-center">
-                        <div class="icon"><span class="fa fa-water"></span></div>
+                        <div class="icon"><span class="fa fa-coffee"></span></div>
                         <h3>Refreshments</h3>
                         <p>Complimentary water during travel</p>
                     </div>
