--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
             <div class="row">
                 <div class="col-md-4 ftco-animate">
                     <div class="package-card">
-                        <div class="package-img" style="background-image: url(images/destination-1.jpg);"></div>
+                        <div class="package-img" style="background-image: url(images/dest-sigiriya.jpg);"></div>
                         <div class="package-content">
                             <span class="package-duration">7 Days / 6 Nights</span>
                             <h3>Cultural Triangle Tour</h3>
@@ -328,7 +328,8 @@
                 </div>
                 <div class="col-md-4 ftco-animate">
                     <div class="package-card">
-                        <div class="package-img" style="background-image: url(images/destination-2.jpg);"></div>
+                        <div class="package-img"
+                            style="background-image: url(images/destinations/mirissa/mirissa.jpg);"></div>
                         <div class="package-content">
                             <span class="package-duration">5 Days / 4 Nights</span>
                             <h3>Beach & Wildlife Safari</h3>
@@ -340,7 +341,7 @@
                 </div>
                 <div class="col-md-4 ftco-animate">
                     <div class="package-card">
-                        <div class="package-img" style="background-image: url(images/destination-3.jpg);"></div>
+                        <div class="package-img" style="background-image: url(images/dest-ella.jpg);"></div>
                         <div class="package-content">
                             <span class="package-duration">10 Days / 9 Nights</span>
                             <h3>Complete Sri Lanka</h3>
@@ -366,25 +367,13 @@
             <div class="row ftco-animate">
                 <div class="col-md-12">
                     <!-- Custom Premium Carousel -->
-                    <div class="premium-testimonial-carousel">
-                        <div class="testimonial-viewport">
-                            <div class="testimonial-track" id="reviews-track">
-                                <!-- Reviews will be loaded dynamically via js/reviews.js -->
-                            </div>
-                        </div>
+                    <!-- Dual-Row Horizontal Marquee -->
+                    <div class="marquee-section">
+                        <!-- Row 1: Left to Right -->
+                        <div class="marquee-track-wrapper" id="marquee-row-1"></div>
 
-                        <!-- Navigation Controls -->
-                        <div class="carousel-controls">
-                            <button class="nav-btn prev-btn" aria-label="Previous Testimonial">
-                                <i class="fa fa-angle-left"></i>
-                            </button>
-                            <div class="progress-container">
-                                <div class="progress-bar" id="carousel-progress"></div>
-                            </div>
-                            <button class="nav-btn next-btn" aria-label="Next Testimonial">
-                                <i class="fa fa-angle-right"></i>
-                            </button>
-                        </div>
+                        <!-- Row 2: Right to Left -->
+                        <div class="marquee-track-wrapper" id="marquee-row-2"></div>
                     </div>
                 </div>
             </div>
