--- a/gallery.html
+++ b/gallery.html
@@ -299,7 +299,7 @@
     </section>
 
     <!-- Upload Section (For Admin/Tourists) -->
-    <section class="ftco-section bg-light">
+    <!-- <section class="ftco-section bg-light">
         <div class="container">
             <div class="row justify-content-center pb-4">
                 <div class="col-md-12 heading-section text-center ftco-animate">
@@ -356,7 +356,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <section class="ftco-intro ftco-section ftco-no-pt">
         <div class="container">
