--- a/about.html
+++ b/about.html
@@ -5,6 +5,20 @@
     <title>About Us - Ceylon Sang</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <meta name="description"
+        content="Learn about Ceylon Sang, your trusted travel partner in Sri Lanka committed to authentic and sustainable tourism.">
+    <meta name="keywords"
+        content="about Ceylon Sang, Sri Lanka travel agency, sustainable tourism Sri Lanka, local tour guides">
+    <link rel="canonical" href="https://www.ceylonsang.com/about.html">
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.ceylonsang.com/about.html">
+    <meta property="og:title" content="About Us - Ceylon Sang">
+    <meta property="og:description" content="Your trusted guide to the Pearl of the Indian Ocean.">
+    <meta property="og:image" content="https://www.ceylonsang.com/images/bg_1.jpg">
+
     <link rel="preload" as="image" href="images/bg_1.jpg">
 
     <link
