--- a/index.html
+++ b/index.html
@@ -2,9 +2,33 @@
 <html lang="en">
 
 <head>
-    <title>Ceylon Sang - Sri Lankan Tour Guide</title>
+    <title>Ceylon Sang - Premium Sri Lankan Tours & Holiday Packages</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- SEO Meta Tags -->
+    <meta name="description"
+        content="Discover Sri Lanka with Ceylon Sang. Tailor-made luxury tours, wildlife safaris, beach holidays, and cultural experiences in the Pearl of the Indian Ocean.">
+    <meta name="keywords"
+        content="Sri Lanka tours, Ceylon travel, luxury holidays Sri Lanka, tour guide Sri Lanka, wildlife safari, cultural tourism">
+    <meta name="author" content="Ceylon Sang">
+    <link rel="canonical" href="https://www.ceylonsang.com/">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.ceylonsang.com/">
+    <meta property="og:title" content="Ceylon Sang - Premium Sri Lankan Tours">
+    <meta property="og:description"
+        content="Experience the magic of Sri Lanka with expert local guidance. Book your perfect holiday today.">
+    <meta property="og:image" content="https://www.ceylonsang.com/images/bg_1.jpg">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://www.ceylonsang.com/">
+    <meta property="twitter:title" content="Ceylon Sang - Premium Sri Lankan Tours">
+    <meta property="twitter:description" content="Experience the magic of Sri Lanka with expert local guidance.">
+    <meta property="twitter:image" content="https://www.ceylonsang.com/images/bg_1.jpg">
+
     <link rel="preload" as="image" href="images/bg_1.jpg">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
