--- a/services.html
+++ b/services.html
@@ -5,7 +5,21 @@
     <title>Our Services - Ceylon Sang</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="preload" as="image" href="images/bg_1.jpg">
+
+    <meta name="description"
+        content="Luxury travel services in Sri Lanka including airport transfers, guided tours, accommodation booking, and wildlife safaris.">
+    <meta name="keywords"
+        content="Sri Lanka travel services, airport transfer Colombo, Sri Lanka hotel booking, guided tours Sri Lanka">
+    <link rel="canonical" href="https://www.ceylonsang.com/services.html">
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.ceylonsang.com/services.html">
+    <meta property="og:title" content="Our Services - Ceylon Sang">
+    <meta property="og:description" content="Professional travel services for a hassle-free Sri Lankan holiday.">
+    <meta property="og:image" content="https://www.ceylonsang.com/images/bg_1.jpg">
+
+    <link rel="preload" as="image" href="images/services.jpg">
 
     <link
         href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700&family=Poppins:wght@300;400;500;600;700&display=swap"
