--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,20 @@
     <title>Contact Us - Ceylon Sang</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <meta name="description"
+        content="Get in touch with Ceylon Sang for personalized Sri Lankan tour packages. Available via email, phone, and WhatsApp.">
+    <meta name="keywords"
+        content="contact Ceylon Sang, book Sri Lanka tour, travel agency Sri Lanka contact, tour inquiries">
+    <link rel="canonical" href="https://www.ceylonsang.com/contact.html">
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.ceylonsang.com/contact.html">
+    <meta property="og:title" content="Contact Us - Ceylon Sang">
+    <meta property="og:description" content="Plan your perfect Sri Lankan holiday. Contact our expert team today.">
+    <meta property="og:image" content="https://www.ceylonsang.com/images/bg_1.jpg">
+
     <link rel="preload" as="image" href="images/bg_1.jpg">
 
     <link
@@ -478,6 +492,7 @@
     <script src="js/auth.js" defer></script>
     <script src="js/edit-flow.js" defer></script>
     <script src="js/reviews.js" defer></script>
+    <script src="js/contact-validate.js" defer></script>
 </body>
 
 </html>
