--- a/gallery.html
+++ b/gallery.html
@@ -2,9 +2,23 @@
 <html lang="en">
 
 <head>
-    <title>Gallery - Ceylon Sang</title>
+    <title>Photo Gallery - Ceylon Sang</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <meta name="description"
+        content="View stunning photos of Sri Lanka's landscapes, wildlife, and culture from our satisfied travelers.">
+    <meta name="keywords"
+        content="Sri Lanka travel photos, Ceylon Sang gallery, wildlife photography Sri Lanka, travel inspiration">
+    <link rel="canonical" href="https://www.ceylonsang.com/gallery.html">
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.ceylonsang.com/gallery.html">
+    <meta property="og:title" content="Photo Gallery - Ceylon Sang">
+    <meta property="og:description" content="See the beauty of Sri Lanka through our lens.">
+    <meta property="og:image" content="https://www.ceylonsang.com/images/bg_1.jpg">
+
     <link rel="preload" as="image" href="images/bg_1.jpg">
 
     <link
