--- a/packages.html
+++ b/packages.html
@@ -5,6 +5,21 @@
     <title>Tour Packages - Ceylon Sang</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <meta name="description"
+        content="Browse our curated Sri Lanka tour packages. From cultural triangles to beach getaways and wildlife adventures.">
+    <meta name="keywords"
+        content="Sri Lanka tour packages, honeymoon packages Sri Lanka, wildlife tour Sri Lanka, cultural tour packages">
+    <link rel="canonical" href="https://www.ceylonsang.com/packages.html">
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.ceylonsang.com/packages.html">
+    <meta property="og:title" content="Tour Packages - Ceylon Sang">
+    <meta property="og:description"
+        content="Curated experiences for every traveler. Book your dream Sri Lankan vacation.">
+    <meta property="og:image" content="https://www.ceylonsang.com/images/bg_1.jpg">
+
     <link rel="preload" as="image" href="images/bg_1.jpg">
 
     <link
