--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
     <link rel="stylesheet" href="css/flaticon.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/ceylon-sang.css">
+    <link rel="stylesheet" href="css/ceylon-sang.css?v=2">
     <link rel="stylesheet" href="css/ceylon-sang-grid.css">
     <link rel="stylesheet" href="css/mobile-enhancements.css">
     <link rel="stylesheet" href="css/auth-modal.css">
@@ -392,13 +392,8 @@
                 <div class="col-md-12">
                     <!-- Custom Premium Carousel -->
                     <!-- Dual-Row Horizontal Marquee -->
-                    <div class="marquee-section">
-                        <!-- Row 1: Left to Right -->
-                        <div class="marquee-track-wrapper" id="marquee-row-1"></div>
-
-                        <!-- Row 2: Right to Left -->
-                        <div class="marquee-track-wrapper" id="marquee-row-2"></div>
-                    </div>
+                    <!-- Custom Premium Carousel -->
+                    <div id="reviews-carousel" class="owl-carousel owl-theme"></div>
                 </div>
             </div>
         </div>
