--- a/profile.html
+++ b/profile.html
@@ -22,7 +22,8 @@
     <link rel="stylesheet" href="css/jquery.timepicker.css">
     <link rel="stylesheet" href="css/flaticon.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/ceylon-sang.css"> <!-- Navbar Styles -->
+    <link rel="stylesheet" href="css/ceylon-sang.css?v=6"> <!-- Navbar Styles -->
+    <link rel="stylesheet" href="css/mobile-enhancements.css"> <!-- Mobile Fixes -->
     <link rel="stylesheet" href="css/auth-modal.css">
     <link rel="stylesheet" href="css/profile.css"> <!-- New Profile Styles -->
 </head>
@@ -266,6 +267,9 @@
     <script src="js/jquery.stellar.min.js" defer></script>
     <script src="js/owl.carousel.min.js" defer></script>
     <script src="js/jquery.magnific-popup.min.js" defer></script>
+    <script src="js/jquery.animateNumber.min.js" defer></script>
+    <script src="js/bootstrap-datepicker.js" defer></script>
+    <script src="js/scrollax.min.js" defer></script>
     <script src="js/main.js" defer></script>
     <script src="js/auth.js" defer></script>
     <script src="js/profile.js" defer></script> <!-- New Script -->
